--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
             <div class="overview-grid">
             
             <div class="overview-card">
-                <h3><a href="#">Latest Projects</a></h3>
+                <h3><a href="./research/">Latest Projects</a></h3>
                 <p>Check some of my latest curiositities</p>
                 <p>It includes projects in robotics, some research, and programming projects.</p>
             </div>
             <div class="overview-card">
-                <h3><a href="#">Recent Thoughts</a></h3>
+                <h3><a href="./blog/">Recent Thoughts</a></h3>
                 <p>Check out my mini blog, as I explore concepts on tech, math, AI, and Philosophy, could be fun.</p>
             </div>
             <div class="overview-card">
-                <h3><a href="#">Curriculum Vitae</a></h3>
+                <h3><a href="./cv/">Curriculum Vitae</a></h3>
                 <p>My CV for people interested in working with me.</p>
             </div>
         </div>
