--- a/research/index.html
+++ b/research/index.html
@@ -32,8 +32,38 @@
             <div class="project-card">
                 <!-- <div class="project-header">🔧</div>   -->
                 <div class="project-content">
+                    <h3>USUMM</h3>
+                    <p>Website that creates blog articles of your youtube feed</p>
+                    <img src="../assets/images/usumm.png">
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Flask</span>
+                        <span class="tech-tag">Gemini API</span>
+                        <span class="tech-tag">Youtube API</span>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <!-- <div class="project-header">🔧</div>   -->
+                <div class="project-content">
+                    <h3><a href="#">BYIT</a></h3>
+                    <p>Full-stack e-commerce web application (BYIT) using vanilla PHP, Code-Igniter framework, and MySQL</p>
+                    <img src="../assets/images/BYIT.png">
+                    <div class="project-tech">
+                        <span class="tech-tag">PHP</span>
+                        <span class="tech-tag">Code-Igniter</span>
+                        <span class="tech-tag">MYSQL</span>
+                        <span class="tech-tag">RESTful API</span>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                
+                <!-- <div class="project-header">🔧</div>   -->
+                <div class="project-content">
                     <h3>Robotic Arm Controller</h3>
                     <p>Open-source control system for 6-DOF robotic arms with inverse kinematics solver and trajectory planning capabilities.</p>
+                    <img src="../assets/images/robot_manipulator.jpeg">
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">NumPy</span>
@@ -42,6 +72,7 @@
                     </div>
                 </div>
             </div>
+            
         </div>
     </div>
 </div>
